--- a/accounts/pom.xml
+++ b/accounts/pom.xml
@@ -75,6 +75,13 @@
 			<version>2.8.8</version>
 		</dependency>
 
+		<dependency>
+			<groupId>io.swagger.core.v3</groupId>
+			<artifactId>swagger-annotations</artifactId>
+			<version>2.2.30</version>
+		</dependency>
+
+
 
 	</dependencies>
 
